--- a/Resources/Prototypes/_NF/Entities/Objects/Tools/access_configurator.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/Tools/access_configurator.yml
@@ -14,6 +14,7 @@
     - Maintenance
     - External
     - Pirate # Frontier
+    - PirateCaptain # Frontier
     privilegedIdSlot:
       name: id-card-console-privileged-id
       ejectSound: /Audio/Machines/id_swipe.ogg
