--- a/Resources/Prototypes/_NF/Loadouts/role_loadouts.yml
+++ b/Resources/Prototypes/_NF/Loadouts/role_loadouts.yml
@@ -546,7 +546,7 @@
   - ContractorBoxSurvival
   - NFPirateFirstMatePDA
   - ContractorWallet
-  - PirateBackpackItems
+  - PirateFirstMateBackpackItems
   - ContractorHandItems
   - NFSpeciesSpecific
   canCustomizeName: true # pseudonym?
